--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             clearInterval(interval);
           }
 
-          iteration += 1 / 3;
-        }, 30);
+          iteration += 1 / 6;
+        }, 15);
       };
 
       // Initial animation on page load
@@ -66,7 +66,7 @@
 
     <main>
       <p>
-        I’m a high school junior from New York with a passion for experimenting and learning across disciplines. This summer, I'll be conducting research at <span style="text-decoration: underline;"><a href="https://www.stonybrook.edu/commcms/simons/index.php" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">Stony Brook University</a></span> through the Simons Fellowship.<br><br> When I'm not <span style="text-decoration: underline;"><a href="https://www.thenorthshoreleader.com/single-post/li-students-compete-in-nasa-robot-competition" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">writing code for the space station</a></span> or leading my school robotics team, I might be on a bike ride or playing around with an Arduino. <br> STEM Is my focus, but I'm also extremely passionate about Piano - I've competed in competitions and am always looking for more to challenge myself. 
+        I’m a high school junior from New York with a passion for experimenting and learning across disciplines. This summer, I'll be conducting research at <span style="text-decoration: underline;"><a href="https://www.stonybrook.edu/commcms/simons/index.php" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">Stony Brook University</a></span> through the Simons Fellowship.<br><br> When I'm not <span style="text-decoration: underline;"><a href="https://mit.zerorobotics.edu" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">writing code for the space station</a></span> or leading my school robotics team, I might be on a bike ride or playing around with an Arduino. <br> STEM Is my focus, but I'm also extremely passionate about Piano - I've competed in competitions and am always looking for more to challenge myself. 
       </p>
       <p>
         This website is currently <em>under construction</em>. The finished website will serve as an archive for my past projects and display what I'm currently working on. In the meantime, please check out my resume <span style="text-decoration: underline;"><a href="https://drive.google.com/file/d/1UN-vKv4bvDSP4UhnFJGaePLvAudbXKwB/view?usp=sharing" target="_blank" style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255); transition: all 0.3s ease-in-out;" onmouseover="this.style.color='white'; this.style.backgroundColor='black';" onmouseout="this.style.color='black'; this.style.backgroundColor='white';">   here → </a></span>.
