--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ray's Personal Site</title>
+  <title>Hi, I'm Ray.</title>
   <link rel="stylesheet" href="index.css">
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -30,7 +30,7 @@
           }
 
           iteration += 1 / 6;
-        }, 15);
+        }, 20);
       };
 
       // Initial animation on page load
@@ -40,6 +40,8 @@
       header.addEventListener("mouseover", animateHeader);
     });
   </script>
+
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
