--- a/index.html
+++ b/index.html
@@ -68,13 +68,22 @@
 
     <main>
       <p>
-        I’m a high school junior from New York with a passion for experimenting and learning across disciplines. This summer, I'll be conducting research at <span style="text-decoration: underline;"><a href="https://www.stonybrook.edu/commcms/simons/index.php" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">Stony Brook University</a></span> through the Simons Fellowship.<br><br> When I'm not <span style="text-decoration: underline;"><a href="https://zerorobotics.mit.edu/" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">writing code for the space station</a></span> or leading my school robotics team, I might be on a bike ride or playing around with an Arduino. <br> STEM Is my focus, but I'm also extremely passionate about Piano - I've competed in competitions and am always looking for more to challenge myself. 
+        I’m a high school junior from New York with a passion for experimenting and learning across disciplines. Previously, I've interned at FIAS Frankfurt for AI development and programmed for the space station through the MIT ZR Competition. <br> Outside of class, I lead my school's robotics team, do some programming side projects (check out my <span style="text-decoration: underline;"><a href="https://github.com/Ray0716" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">pinned</a></span> repos!), and occasionally some Piano competitions and performances. 
       </p>
+      
+
+
+      
       <p>
-        This website is currently <em>under construction</em>. The finished website will serve as an archive for my past projects and display what I'm currently working on. In the meantime, please check out my resume <span style="text-decoration: underline;"><a href="https://drive.google.com/file/d/1UN-vKv4bvDSP4UhnFJGaePLvAudbXKwB/view?usp=sharing" target="_blank" style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255); transition: all 0.3s ease-in-out;" onmouseover="this.style.color='white'; this.style.backgroundColor='black';" onmouseout="this.style.color='black'; this.style.backgroundColor='white';">   here → </a></span>.
-      </p>
-      <p>
+        This summer, I'll be conducting research at <span style="text-decoration: underline;"><a href="https://www.stonybrook.edu/commcms/simons/index.php" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">Stony Brook University</a></span> through the Simons Fellowship. Let me know if you're on campus! <br> <br> 
+
+
         I'm always open to connect — feel free to reach out via <span style="text-decoration: underline;"><a href="mailto:raytang11792@gmail.com" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">email</a></span> or DM me on <span style="text-decoration: underline;"><a href="https://www.instagram.com/ruirui0716__/" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">social media</a></span>! 
+      </p>
+
+      <p style="text-decoration: none; color: rgb(218, 218, 218);"><em>
+        Ray's main website is under construction. <br>In the meantime, please check out their resume 
+        <span style="text-decoration: underline;"><a href="https://drive.google.com/file/d/1UN-vKv4bvDSP4UhnFJGaePLvAudbXKwB/view?usp=sharing" target="_blank" style="color: rgb(0, 0, 0); background-color: rgb(196, 221, 231); transition: all 0.3s ease-in-out;" onmouseover="this.style.color='white'; this.style.backgroundColor='black';" onmouseout="this.style.color='black'; this.style.backgroundColor='white';">   here → </a></span>.</em>
       </p>
     </main>
   </div>
