--- a/index.html
+++ b/index.html
@@ -68,14 +68,12 @@
 
     <main>
       <p>
-        I’m a high school junior from New York with a passion for experimenting and learning across disciplines. Previously, I've interned at FIAS Frankfurt for AI development and programmed for the space station through the MIT ZR Competition. <br> Outside of class, I lead my school's robotics team, do some programming side projects (check out my <span style="text-decoration: underline;"><a href="https://github.com/Ray0716" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">pinned</a></span> repos!), and occasionally some Piano competitions and performances. 
+        I’m a high school senior from New York with a passion for experimenting and learning across disciplines. <br/> Previously, I've interned at FIAS Frankfurt for AI development and programmed for the space station through the MIT ZR Competition. <br> Outside of class, I'm passionate for the performing arts and occasionally some Piano competitions and performances. I also do some programming side projects (check out my <span style="text-decoration: underline;"><a href="https://github.com/Ray0716" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">pinned</a></span> repos!), and am getting into photography. 
       </p>
       
-
-
       
       <p>
-        This summer, I'll be conducting research at <span style="text-decoration: underline;"><a href="https://www.stonybrook.edu/commcms/simons/index.php" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">Stony Brook University</a></span> through the Simons Fellowship. Let me know if you're on campus! <br> <br> 
+        Currently, I'm working on a research project at <span style="text-decoration: underline;"><a href="https://www.stonybrook.edu/commcms/simons/index.php" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">Stony Brook University</a></span> through the Simons Fellowship.<br> <br> 
 
 
         I'm always open to connect — feel free to reach out via <span style="text-decoration: underline;"><a href="mailto:raytang11792@gmail.com" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">email</a></span> or DM me on <span style="text-decoration: underline;"><a href="https://www.instagram.com/ruirui0716__/" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">social media</a></span>! 
