--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hi, I'm Ray.</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" type="image/png" href="favicon.png">
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()[]{};':<>?/";
