--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
 
 </head>
 <body>
+  <div class="stars"></div>
+<div class="shooting-star"></div>
+<div class="shooting-star"></div>
+<div class="shooting-star"></div>
+<div class="shooting-star"></div>
+<div class="shooting-star"></div>
   <div class="container">
+
     <header >
       <h1 class="nameheader" data-value="Hi, I'm Ray :)">Hi, I'm Ray :)</h1>
     </header>
@@ -69,12 +76,12 @@
 
     <main>
       <p>
-        I’m a high school senior from New York with a passion for experimenting and learning across disciplines. <br/> Previously, I've interned at FIAS Frankfurt for AI development and programmed robots on the space station through the <span style="text-decoration: underline;"><a href="https://www.thenorthshoreleader.com/single-post/li-students-compete-in-nasa-robot-competition" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">MIT ZR Competition</a></span>. <br> Outside of class, I'm passionate for the performing arts and occasionally some Piano competitions and performances. I also do some programming side projects (check out my <span style="text-decoration: underline;"><a href="https://github.com/Ray0716" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">pinned</a></span> repos!), and am getting into photography. 
+        I’m a high school senior from New York with a passion for experimenting and learning across disciplines. <br> Previously, I've interned at FIAS Frankfurt for AI development and programmed robots on the space station through the <span style="text-decoration: underline;"><a href="https://www.thenorthshoreleader.com/single-post/li-students-compete-in-nasa-robot-competition" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">MIT ZR Competition</a></span>. <br> Outside of class, I'm passionate for the performing arts - I do Piano competitions and performances. I also have some programming side projects (check out my <span style="text-decoration: underline;"><a href="https://github.com/Ray0716" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">pinned</a></span> repos!), and am getting into photography. 
       </p>
       
       
       <p>
-        Currently, I'm working on a research project at <span style="text-decoration: underline;"><a href="https://www.stonybrook.edu/commcms/simons/index.php" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">Stony Brook University</a></span> through the Simons Fellowship.<br> <br> 
+        Currently, I'm working on a research paper at <span style="text-decoration: underline;"><a href="https://www.stonybrook.edu/commcms/simons/index.php" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">Stony Brook University</a></span> through the Simons Fellowship.<br> <br> 
 
 
         I'm always open to connect — feel free to reach out via <span style="text-decoration: underline;"><a href="mailto:raytang11792@gmail.com" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">email</a></span> or <span style="text-decoration: underline;"><a href="https://www.instagram.com/ruirui0716__/" target="_blank" style="color: white; transition: all 0.3s ease-in-out;" onmouseover="this.style.color='black'; this.style.backgroundColor='white';" onmouseout="this.style.color='white'; this.style.backgroundColor='transparent';">social media</a></span>! ( ^ ω ^ )
