--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 </head>
 <body>
   <div class="stars"></div>
+<div class="shooting-star" style="margin-top: -300px;"></div>
+<div class="shooting-star"></div>
+<div class="shooting-star"></div>
+<div class="shooting-star"></div>
+<div class="shooting-star"></div>
 <div class="shooting-star"></div>
 <div class="shooting-star"></div>
 <div class="shooting-star"></div>
